# python-hass-client

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  hass-client.code-workspace  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  setup.py  test.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: publish-to-pypi.yml  test.yml
hass_client/: __init__.py  __main__.py  client.py  const.py  exceptions.py  models.py  utils.py
